@@ -333,7 +333,7 @@ while [ $# -ge 1 ] ; do
 	elif [ $1 = "-quick" -o $1 = "-q" ] ; then
 		echo "running quick config"
 		if [ -f "config.settings" ] ; then
-			. config.settings
+			. ./config.settings
 		fi
 		RUN_CONFIGURE
 		exit 0
@@ -346,7 +346,7 @@ while [ $# -ge 1 ] ; do
 done
 
 if [ -f "config.settings" -a -z "$NOCACHE" ] ; then
-    . config.settings
+    . ./config.settings
 fi
 
 if [ "$PREADVANCED" = "1" ] ; then
